--- a/Tu/Main.storyboard
+++ b/Tu/Main.storyboard
@@ -1,173 +1,57 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="6I5-Im-gcI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3u1-LB-OLp">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Tu To Do List Table View Controller - To-Do List-->
-        <scene sceneID="DYT-qr-j1g">
+        <!--My HomeUI Collection View Controller-->
+        <scene sceneID="sEZ-09-tBG">
             <objects>
-                <tableViewController id="DR9-xa-wuU" customClass="TuToDoListTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YuW-xT-P8h">
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="3u1-LB-OLp" customClass="MyHomeUICollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="Dd6-5e-a4N">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListPrototypeCell" textLabel="u3p-QY-vVg" style="IBUITableViewCellStyleDefault" id="2e5-SZ-4ID">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zLJ-g2-2KI">
+                            <size key="itemSize" width="103" height="103"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyHomeCollectionViewCell" id="sGy-d7-Tr3" customClass="MyHomeCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2e5-SZ-4ID" id="YvQ-k3-DEt">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Mow the Lawn" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="u3p-QY-vVg">
-                                            <rect key="frame" x="15" y="0.0" width="290" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u8x-4C-SrE">
+                                            <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        </imageView>
                                     </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="XwD-4e-KLv" style="IBUITableViewCellStyleDefault" id="rkF-et-OOf">
-                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rkF-et-OOf" id="Oak-4g-S6g">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="LOL" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XwD-4e-KLv">
-                                            <rect key="frame" x="15" y="0.0" width="290" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="Jay-1o-yJx" style="IBUITableViewCellStyleDefault" id="X8W-sN-2nP">
-                                <rect key="frame" x="0.0" y="174" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X8W-sN-2nP" id="nGO-0c-PYg">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Buy food" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jay-1o-yJx">
-                                            <rect key="frame" x="15" y="0.0" width="290" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <sections/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="u8x-4C-SrE" firstAttribute="top" secondItem="sGy-d7-Tr3" secondAttribute="top" id="5zU-0P-tCJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="u8x-4C-SrE" secondAttribute="trailing" id="LUr-jC-YCg"/>
+                                    <constraint firstItem="u8x-4C-SrE" firstAttribute="leading" secondItem="sGy-d7-Tr3" secondAttribute="leading" id="RPg-T1-YRd"/>
+                                    <constraint firstAttribute="bottom" secondItem="u8x-4C-SrE" secondAttribute="bottom" id="qvg-tg-hWM"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="u8x-4C-SrE" id="Sfy-gT-mGj"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
                         <connections>
-                            <outlet property="dataSource" destination="DR9-xa-wuU" id="GpQ-aE-U8b"/>
-                            <outlet property="delegate" destination="DR9-xa-wuU" id="pge-FB-6Ch"/>
+                            <outlet property="dataSource" destination="3u1-LB-OLp" id="1N5-EV-t0v"/>
+                            <outlet property="delegate" destination="3u1-LB-OLp" id="aCo-jx-d8C"/>
                         </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="To-Do List" id="yjz-9F-D8G">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="M4h-lh-h1F">
-                            <connections>
-                                <segue destination="lb3-FF-2tM" kind="modal" id="Yom-qP-gVp"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="g3d-Ws-lJc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hq6-48-1GE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="322" y="59"/>
-        </scene>
-        <!--Tu Add To Do Item View Controller - Add To-Do Item-->
-        <scene sceneID="hFo-Rb-hGE">
-            <objects>
-                <viewController id="g3Z-CO-WZO" customClass="TuAddToDoItemViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="LIY-Fe-dD4"/>
-                        <viewControllerLayoutGuide type="bottom" id="MOE-1S-YGq"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Y8y-s4-Xyw">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To-do item" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tsc-Ka-N4M">
-                                <rect key="frame" x="20" y="118" width="280" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Tsc-Ka-N4M" firstAttribute="top" secondItem="LIY-Fe-dD4" secondAttribute="bottom" constant="54" id="QeV-lI-ZbI"/>
-                            <constraint firstAttribute="trailing" secondItem="Tsc-Ka-N4M" secondAttribute="trailing" constant="20" id="e2F-Ob-Otx"/>
-                            <constraint firstItem="Tsc-Ka-N4M" firstAttribute="leading" secondItem="Y8y-s4-Xyw" secondAttribute="leading" constant="20" id="pDe-bt-bfg"/>
-                        </constraints>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Add To-Do Item" id="KO4-PL-oBR">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="vwe-vL-Abw">
-                            <connections>
-                                <segue destination="buz-AS-HWb" kind="unwind" unwindAction="unwindToList:" id="YAB-nf-VeD"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Done" id="abB-Mx-IeY">
-                            <connections>
-                                <segue destination="buz-AS-HWb" kind="unwind" unwindAction="unwindToList:" id="lDs-ZU-HQw"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="doneButton" destination="abB-Mx-IeY" id="4GV-Eg-dXG"/>
-                        <outlet property="textField" destination="Tsc-Ka-N4M" id="hPN-DP-7wf"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PDo-a3-DL0" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="buz-AS-HWb" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="1267" y="59"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="B8L-p5-Nlj">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6I5-Im-gcI" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pa6-cG-jam">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="DR9-xa-wuU" kind="relationship" relationship="rootViewController" id="Ais-lg-J8r"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dt2-9t-i9G" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-204" y="59"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="agv-sL-3Si">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lb3-FF-2tM" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ke9-tM-hFT">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="g3Z-CO-WZO" kind="relationship" relationship="rootViewController" id="GRe-BP-4Va"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pkP-rG-u3L" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="741" y="59"/>
+            <point key="canvasLocation" x="409" y="119"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
