--- a/Tu/Main.storyboard
+++ b/Tu/Main.storyboard
@@ -1,57 +1,129 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3u1-LB-OLp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nm0-nG-bdZ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--My HomeUI Collection View Controller-->
-        <scene sceneID="sEZ-09-tBG">
+        <!--View Controller - MyStats-->
+        <scene sceneID="EVc-Ad-Sek">
             <objects>
-                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="3u1-LB-OLp" customClass="MyHomeUICollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="Dd6-5e-a4N">
+                <viewController title="MyStats" id="fru-gq-uKu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="B1A-cA-OVd"/>
+                        <viewControllerLayoutGuide type="bottom" id="T3F-8B-w8f"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lT9-hR-YMB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="KLF-zV-ubZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g2d-NP-lUN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1151" y="-338"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="BhC-j6-J0h">
+            <objects>
+                <tabBarController definesPresentationContext="YES" id="nm0-nG-bdZ" sceneMemberID="viewController">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="H3S-hl-6Ed">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="4Mf-Vh-p0l" kind="relationship" relationship="viewControllers" id="qQY-uo-khS"/>
+                        <segue destination="fcK-ZN-0BN" kind="relationship" relationship="viewControllers" id="5JB-TA-T4I"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="09y-wD-s10" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="91" y="-11"/>
+        </scene>
+        <!--Watch List Table View Controller - WatchList-->
+        <scene sceneID="ko6-Dc-48y">
+            <objects>
+                <viewController title="WatchList" id="sJJ-Ru-vmn" customClass="WatchListTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="kX6-L5-1sI">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zLJ-g2-2KI">
-                            <size key="itemSize" width="103" height="103"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyHomeCollectionViewCell" id="sGy-d7-Tr3" customClass="MyHomeCollectionViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="MdY-KN-jZz">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="sJJ-Ru-vmn" id="aZV-8c-m6B"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="WatchListCell" id="FI0-Iz-2Lw">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FI0-Iz-2Lw" id="rUu-0B-rdz">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u8x-4C-SrE">
-                                            <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                                <constraints>
-                                    <constraint firstItem="u8x-4C-SrE" firstAttribute="top" secondItem="sGy-d7-Tr3" secondAttribute="top" id="5zU-0P-tCJ"/>
-                                    <constraint firstAttribute="trailing" secondItem="u8x-4C-SrE" secondAttribute="trailing" id="LUr-jC-YCg"/>
-                                    <constraint firstItem="u8x-4C-SrE" firstAttribute="leading" secondItem="sGy-d7-Tr3" secondAttribute="leading" id="RPg-T1-YRd"/>
-                                    <constraint firstAttribute="bottom" secondItem="u8x-4C-SrE" secondAttribute="bottom" id="qvg-tg-hWM"/>
-                                </constraints>
-                                <connections>
-                                    <outlet property="imageView" destination="u8x-4C-SrE" id="Sfy-gT-mGj"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="3u1-LB-OLp" id="1N5-EV-t0v"/>
-                            <outlet property="delegate" destination="3u1-LB-OLp" id="aCo-jx-d8C"/>
-                        </connections>
-                    </collectionView>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hq6-48-1GE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="5Rr-60-D5p"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="UwY-wP-pl1" id="h73-8y-uR2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tTs-fX-mkC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="UwY-wP-pl1">
+                    <connections>
+                        <outlet property="delegate" destination="sJJ-Ru-vmn" id="7Q5-7r-JYO"/>
+                        <outlet property="searchBar" destination="MdY-KN-jZz" id="CMH-Gk-a7h"/>
+                        <outlet property="searchContentsController" destination="sJJ-Ru-vmn" id="GSU-Mc-8lU"/>
+                        <outlet property="searchResultsDataSource" destination="sJJ-Ru-vmn" id="3Lb-Qc-JTH"/>
+                        <outlet property="searchResultsDelegate" destination="sJJ-Ru-vmn" id="7Zg-j3-NzE"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="409" y="119"/>
+            <point key="canvasLocation" x="1151" y="315"/>
+        </scene>
+        <!--Navigation Controller - MyStats-->
+        <scene sceneID="V9Z-hU-dww">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="4Mf-Vh-p0l" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="MyStats" id="aym-f1-zD2"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nVN-sh-EVx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fru-gq-uKu" kind="relationship" relationship="rootViewController" id="fKg-nq-dfX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2rI-cy-uNc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="625" y="-338"/>
+        </scene>
+        <!--Navigation Controller - WatchList-->
+        <scene sceneID="z3I-14-1We">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="fcK-ZN-0BN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="WatchList" id="hYz-Wb-LI7"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QgT-VJ-L7s">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sJJ-Ru-vmn" kind="relationship" relationship="rootViewController" id="83G-2p-smq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yWe-t1-nkn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="625" y="315"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
