--- a/Tu/Main.storyboard
+++ b/Tu/Main.storyboard
@@ -30,16 +30,42 @@
         <scene sceneID="9V4-2n-cmZ">
             <objects>
                 <tableViewController title="News Feed" id="P1a-bg-dx8" customClass="NewsFeedTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="bQy-F3-ASU">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="bQy-F3-ASU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="alf-1p-Cb9">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="recentMatchCell" rowHeight="100" id="alf-1p-Cb9" customClass="NewsFeedTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="alf-1p-Cb9" id="Fmz-ld-zAN">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="datetime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="kr5-iS-9FI" userLabel="DateTimeLabel">
+                                            <rect key="frame" x="241" y="78" width="71" height="14"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Zr3-Su-Rop" userLabel="ContentLabel">
+                                            <rect key="frame" x="8" y="8" width="304" height="62"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="kr5-iS-9FI" firstAttribute="top" secondItem="Zr3-Su-Rop" secondAttribute="bottom" id="hYH-DR-eau"/>
+                                        <constraint firstItem="kr5-iS-9FI" firstAttribute="trailing" secondItem="Fmz-ld-zAN" secondAttribute="trailingMargin" id="l5Y-Je-RAZ"/>
+                                        <constraint firstItem="Zr3-Su-Rop" firstAttribute="top" secondItem="Fmz-ld-zAN" secondAttribute="topMargin" constant="4" id="t4y-J5-jcM"/>
+                                        <constraint firstItem="Zr3-Su-Rop" firstAttribute="leading" secondItem="Fmz-ld-zAN" secondAttribute="leadingMargin" constant="2" id="u7f-Gk-9Th"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="kr5-iS-9FI" secondAttribute="bottom" id="x5A-IH-94l"/>
+                                        <constraint firstItem="Zr3-Su-Rop" firstAttribute="trailing" secondItem="Fmz-ld-zAN" secondAttribute="trailingMargin" id="xug-Qz-RGo"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="contentLabel" destination="Zr3-Su-Rop" id="Wf8-3p-gFr"/>
+                                    <outlet property="datetimeLabel" destination="kr5-iS-9FI" id="4wb-Hp-pJD"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
